# faser-.-tracking

./: .asetup.save  .gitignore  setup.sh
calypso/: .gitignore  .gitlab-ci.yml.fixme  .gitmodules  CMakeLists.txt  LICENSE  README.md  asetup.faser  package_filters.txt
calypso/Calorimeter/CaloDetDescr/CaloGeoModelUtils/: CMakeLists.txt
calypso/Calorimeter/CaloDetDescr/CaloIdDictFiles/: CMakeLists.txt
calypso/Calorimeter/CaloDetDescr/CaloReadoutGeometry/: CMakeLists.txt
calypso/Calorimeter/CaloDetDescr/EcalGeoModel/: CMakeLists.txt
calypso/Calorimeter/CaloDetDescr/FaserCaloIdentifier/: CMakeLists.txt
calypso/Calorimeter/CaloDetDescrCnv/CaloIdCnv/: CMakeLists.txt
calypso/Calorimeter/CaloDigiAlgs/: CMakeLists.txt
calypso/Calorimeter/CaloDigiAlgs/python/: CaloDigiAlgsConfig.py
calypso/Calorimeter/CaloDigiAlgs/src/: CaloWaveformDigiAlg.cxx  CaloWaveformDigiAlg.h
calypso/Calorimeter/CaloEventCnv/FaserCaloSimEventAthenaPool/: CMakeLists.txt
calypso/Calorimeter/CaloEventCnv/FaserCaloSimEventTPCnv/: CMakeLists.txt
calypso/Calorimeter/CaloG4/EcalG4_SD/: CMakeLists.txt
calypso/Calorimeter/CaloRecAlgs/: CMakeLists.txt
calypso/Calorimeter/CaloRecAlgs/python/: CaloRecAlgsConfig.py
calypso/Calorimeter/CaloRecAlgs/src/: CaloRecAlg.cxx  CaloRecAlg.h
calypso/Calorimeter/CaloRecTools/: CMakeLists.txt
calypso/Calorimeter/CaloRecTools/CaloRecTools/: ICaloRecTool.h
calypso/Calorimeter/CaloRecTools/python/: CaloRecToolConfig.py
calypso/Calorimeter/CaloRecTools/src/: CaloRecTool.cxx  CaloRecTool.h
calypso/Calorimeter/FaserCaloSimEvent/: CMakeLists.txt
calypso/Calorimeter/FaserCaloSimEvent/FaserCaloSimEvent/: CaloHit.h  CaloHitCollection.h  CaloHitIdHelper.h  CaloSimEventDict.h  selection.xml
calypso/Calorimeter/FaserCaloSimEvent/src/: CaloHit.cxx  CaloHitIdHelper.cxx
calypso/Control/CalypsoCommon/: CMakeLists.txt
calypso/Control/CalypsoCommon/python/: GlobalFlags.py
calypso/Control/CalypsoConfiguration/: CMakeLists.txt
calypso/Control/CalypsoConfiguration/python/: AllConfigFlags.py  AutoConfigFlags.py  DetectorConfigFlags.py  GeoModelConfigFlags.py  MainServicesConfig.py  __init__.py  testDetectorFlags.py
calypso/Control/CalypsoExample/BarcodeChecker/: CMakeLists.txt
calypso/Control/CalypsoExample/Digitization/: CMakeLists.txt
calypso/Control/CalypsoExample/GenEventExample/: CMakeLists.txt
calypso/Control/CalypsoExample/Generation/: CMakeLists.txt
calypso/Control/CalypsoExample/GeoModelTest/: CMakeLists.txt  README.md
calypso/Control/CalypsoExample/NeutrinoHits/: CMakeLists.txt
calypso/Control/CalypsoExample/RDOReadExample/: CMakeLists.txt  README.md
calypso/Control/CalypsoExample/Reconstruction/: CMakeLists.txt  (+1 more)
calypso/Derivation/DerivationAlgs/: CMakeLists.txt
calypso/Derivation/DerivationTools/: CMakeLists.txt
calypso/DetectorDescription/DetDescrCnvSvc/: CMakeLists.txt
calypso/DetectorDescription/FaserDetDescr/: CMakeLists.txt
calypso/DetectorDescription/FaserReadoutGeometry/: CMakeLists.txt
calypso/DetectorDescription/IdDictDetDescrCnv/: CMakeLists.txt
calypso/Event/FaserByteStreamCnvSvc/: CMakeLists.txt  README.md
calypso/Event/FaserByteStreamCnvSvcBase/: CMakeLists.txt
calypso/Event/FaserEventPlugins/: CMakeLists.txt
calypso/Event/FaserEventStorage/: CMakeLists.txt  README
calypso/FaserGeometryCommon/TrenchGeoModel/: CMakeLists.txt
calypso/Generators/DIFGenerator/: CMakeLists.txt  README.md
calypso/Generators/FaserCosmicGenerator/: CMakeLists.txt  README.md
calypso/Generators/FaserParticleGun/: CMakeLists.txt
calypso/Generators/FlukaReader/: CMakeLists.txt
calypso/Generators/ForeseeGenerator/: CMakeLists.txt
calypso/Generators/GeneratorUtils/: CMakeLists.txt
calypso/Generators/GenieReader/: CMakeLists.txt
calypso/Generators/HEPMCReader/: CMakeLists.txt
calypso/Generators/TestBeamReader/: CMakeLists.txt
calypso/LHCData/LHCDataAlgs/: CMakeLists.txt
calypso/LHCData/LHCDataTools/: CMakeLists.txt
calypso/MagneticField/FaserBFieldData/: CMakeLists.txt
calypso/MagneticField/MagFieldConditions/: CMakeLists.txt
calypso/MagneticField/MagFieldElements/: CMakeLists.txt
calypso/MagneticField/MagFieldServices/: CMakeLists.txt
calypso/Monitoring/: CMakeLists.txt
calypso/Monitoring/python/: LegacySelector.py  Monitor1DValue.py  MonitorValueBase.py  MonitorValueManager.py  README  __init__.py
calypso/Monitoring/share/: simpleMonitoringTest.json  simpleMonitoringTest.py
calypso/Neutrino/NeutrinoRecAlgs/: CMakeLists.txt
calypso/Neutrino/NeutrinoSimEvent/: CMakeLists.txt
calypso/PhysicsAnalysis/NeutrinoSearch/: CMakeLists.txt
calypso/PhysicsAnalysis/NtupleDumper/: CMakeLists.txt
calypso/Scintillator/ScintDigiAlgs/: CMakeLists.txt
calypso/Scintillator/ScintSimEvent/: CMakeLists.txt
calypso/Simulation/: README.md
calypso/Simulation/FaserGeant4/: CMakeLists.txt
calypso/Tracker/TrackerSimEvent/: CMakeLists.txt
calypso/Tracking/Acts/: README.md
calypso/Waveform/WaveDigiTools/: CMakeLists.txt
calypso/Waveform/WaveRawEvent/: CMakeLists.txt
calypso/Waveform/WaveRecAlgs/: CMakeLists.txt
calypso/Waveform/WaveRecTools/: CMakeLists.txt
calypso/faser-common/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md
calypso/faser-common/CablingDB/: cablingDB.py  cablingDBMC.py  extractDigitizerMapping.py  extractDigitizerScale.py  extractTRBMapping.py
calypso/faser-common/EventFormats/: CMakeLists.txt
calypso/faser-common/Exceptions/: CMakeLists.txt
calypso/faser-common/Logging/: CMakeLists.txt
calypso/faser-common/tests/: CMakeLists.txt  test_DAQFormats.cpp  test_exceptions.cpp  test_logger.cpp
calypso/graphics/VTI12/: README.md
calypso/xAOD/xAODFaserCalorimeter/: CMakeLists.txt  README
calypso/xAOD/xAODFaserCalorimeterAthenaPool/: CMakeLists.txt
calypso/xAOD/xAODFaserLHC/: CMakeLists.txt
calypso/xAOD/xAODFaserLHCAthenaPool/: CMakeLists.txt
calypso/xAOD/xAODFaserTrigger/: CMakeLists.txt
calypso/xAOD/xAODFaserTriggerAthenaPool/: CMakeLists.txt
calypso/xAOD/xAODFaserWaveform/: CMakeLists.txt
calypso/xAOD/xAODFaserWaveformAthenaPool/: CMakeLists.txt
(+2429 files in other folders)
